# Music_linux

./: 8080  8888  README.md
Board/: CMakeLists.txt  arm_linux_setup.cmake  bulid.sh
Board/bulid/: CMakeCache.txt  Makefile  app  cmake_install.cmake
Board/include/: LOG.h  device.h  epoll.h  list.h  main.h  player.h  select.h  socket.h  voice.h
Board/src/: LOG.c  device.c  epoll.c  list.c  main.c  player.c  select.c  socket.c  voice.c
Dirver/KEY/: .keydrv.ko.cmd  .keydrv.mod.o.cmd  .keydrv.o.cmd  Makefile  keydrv.c  keydrv.ko  keydrv.mod.c  keytest  keytest.c  modules.order
Dirver/KEY/.tmp_versions/: keydrv.mod
Dirver/LED/: .leddrv.ko.cmd  .leddrv.mod.o.cmd  .leddrv.o.cmd  Makefile  leddrv.c  leddrv.ko  leddrv.mod.c  ledtest  ledtest.c  modules.order
Dirver/LED/.tmp_versions/: leddrv.mod
Music_Qt/: Music.pro  im.qrc  imm.qrc  main.cpp  music.cpp  music.h  music.ui  myobject.cpp  sendfile.h
Music_Qt/Project/Music/: Music.pro  main.cpp  music.cpp  music.h  music.ui
Music_Qt/Project/build-Music-Desktop_Qt_5_9_0_MinGW_32bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_music.h
Server8080/: CMakeLists.txt  run.sh
Server8080/bulid/: CMakeCache.txt  Makefile  cmake_install.cmake  server
Server8080/include/: mian.h  server.h
Server8080/src/: main.cpp  server.cpp
Server8888/: CMakeLists.txt
Server8888/bulid/: CMakeCache.txt  Makefile  cmake_install.cmake  server
Server8888/include/: mian.h  node.h  player.h  server.h
Server8888/src/: player.cpp  server.cpp  server.txt
(+1 files in other folders)
